add user module and auth module

--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,12 @@ APP_UPLOAD_DIR=
 # AUTH
 #
 AUTH_SECRET=demosecretonly
-AUTH_MAX_AGE=86400000
+AUTH_EXPIRES_IN=30d
+AUTH_CALLBACK_HREF=http://localhost:3200/auth/callback
+AUTH_VERIFIED_HREF=http://localhost:3200/auth/create-account
+AUTH_RESET_PW_HREF=http://localhost:3200/auth/reset-password
+AUTH_FB_CLIENT_ID=861543131001224
+AUTH_FB_SECRET=5bff118f534371d656d695edc1de02a8
 
 #
 # TYPEORM
@@ -30,9 +35,9 @@ REDIS_PASSWORD=
 #
 # MAIL
 #
-MAIL_HOST=mail.infomaniak.com
-MAIL_PORT=465
-MAIL_SECURE=SSL
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_SECURE=
 MAIL_FROM=Tomisha <no-reply@tomisha.com>
 MAIL_USER=no-reply@tomisha.com
 MAIL_PASS=
