user & auth module

--- a/.env.staging
+++ b/.env.staging
@@ -9,22 +9,22 @@ APP_UPLOAD_DIR=
 #
 AUTH_SECRET=demosecretonly
 AUTH_EXPIRES_IN=2592000
-AUTH_CALLBACK_HREF=http://localhost:3200/auth/callback
-AUTH_VERIFIED_HREF=http://localhost:3200/auth/create-account
-AUTH_RESET_PW_HREF=http://localhost:3200/auth/reset-password
+AUTH_CALLBACK_HREF=http://tomisha.io/auth/callback
+AUTH_VERIFIED_HREF=http://tomisha.io/auth/create-account
+AUTH_RESET_PW_HREF=http://tomisha.io/auth/reset-password
 AUTH_FB_CLIENT_ID=861543131001224
 AUTH_FB_SECRET=5bff118f534371d656d695edc1de02a8
 
-RECAPTCHA_SECRET=6LfMaLEZAAAAAK_FwISDorDwEZf0h7bc1qF2hVIU
+RECAPTCHA_SECRET=6LdeirEZAAAAAIT9e9KtQs-UkvB8L8gDFN94u--c
 
 #
 # TYPEORM
 #
 TYPEORM_HOST=localhost
 TYPEORM_PORT=5432
-TYPEORM_USERNAME=ndq
+TYPEORM_USERNAME=dev
 TYPEORM_PASSWORD=123123
-TYPEORM_DATABASE=tomisha
+TYPEORM_DATABASE=tomisha-dev
 
 #
 # REDIS DATABASE
@@ -37,9 +37,9 @@ REDIS_PASSWORD=
 #
 # MAIL
 #
-MAIL_HOST=localhost
-MAIL_PORT=1025
-MAIL_SECURE=
+MAIL_HOST=mail.infomaniak.com
+MAIL_PORT=465
+MAIL_SECURE=SSL
 MAIL_FROM=Tomisha <no-reply@tomisha.com>
 MAIL_USER=no-reply@tomisha.com
 MAIL_PASS=
