--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -42,6 +42,7 @@
     "helmet": "^3.23.3",
     "moment": "^2.27.0",
     "nestjs-redis": "^1.2.8",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
@@ -63,6 +64,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
+    "@types/node-fetch": "^2.5.7",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.3",
     "@types/passport-jwt": "^3.0.3",
