--- a/.env.development
+++ b/.env.development
@@ -2,19 +2,21 @@
 # APPLICATION
 #
 APP_PORT=3100
-APP_UPLOAD_DIR=
+APP_UPLOAD_DIR=public
 APP_DOMAIN=http://localhost:3100/
+
+WEB_APP_DOMAIN=http://localhost:3200/
 
 #
 # AUTH
 #
 AUTH_SECRET=demosecretonly
 AUTH_EXPIRES_IN=2592000
-AUTH_CALLBACK_HREF=http://localhost:3200/auth/callback
-AUTH_VERIFIED_HREF=http://localhost:3200/auth/create-account
-AUTH_RESET_PW_HREF=http://localhost:3200/auth/reset-password
-AUTH_FB_CLIENT_ID=861543131001224
-AUTH_FB_SECRET=5bff118f534371d656d695edc1de02a8
+AUTH_CALLBACK_HREF=auth/callback
+AUTH_VERIFIED_HREF=auth/create-account
+AUTH_RESET_PW_HREF=auth/reset-password
+AUTH_FB_CLIENT_ID=327754781581344
+AUTH_FB_SECRET=77cd0e8c3edc72a8c7f954b2ef5d044d
 
 RECAPTCHA_SECRET=6LfMaLEZAAAAAK_FwISDorDwEZf0h7bc1qF2hVIU
 
