--- a/.env.staging
+++ b/.env.staging
@@ -2,17 +2,19 @@
 # APPLICATION
 #
 APP_PORT=3100
-APP_UPLOAD_DIR=
+APP_UPLOAD_DIR=public
 APP_DOMAIN=https://api.tomisha.io/
+
+WEB_APP_DOMAIN=https://tomisha.io/
 
 #
 # AUTH
 #
 AUTH_SECRET=demosecretonly
 AUTH_EXPIRES_IN=2592000
-AUTH_CALLBACK_HREF=http://tomisha.io/auth/callback
-AUTH_VERIFIED_HREF=http://tomisha.io/auth/create-account
-AUTH_RESET_PW_HREF=http://tomisha.io/auth/reset-password
+AUTH_CALLBACK_HREF=auth/callback
+AUTH_VERIFIED_HREF=auth/create-account
+AUTH_RESET_PW_HREF=auth/reset-password
 AUTH_FB_CLIENT_ID=861543131001224
 AUTH_FB_SECRET=5bff118f534371d656d695edc1de02a8
 
