--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/schedule": "^0.4.0",
+    "@nestjs/serve-static": "^2.1.3",
     "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
     "@nuxtjs/auth": "^4.9.1",
@@ -41,6 +42,7 @@
     "handlebars": "^4.7.6",
     "helmet": "^3.23.3",
     "moment": "^2.27.0",
+    "multer": "^1.4.2",
     "nestjs-redis": "^1.2.8",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.10",
