replace infomaniak by sendgrid

--- a/.env.staging
+++ b/.env.staging
@@ -39,9 +39,9 @@ REDIS_PASSWORD=
 #
 # MAIL
 #
-MAIL_HOST=mail.infomaniak.com
-MAIL_PORT=465
-MAIL_SECURE=SSL
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_SECURE=TLS
 MAIL_FROM=Tomisha <no-reply@tomisha.com>
-MAIL_USER=no-reply@tomisha.com
-MAIL_PASS=
+MAIL_USER=apikey
+MAIL_PASS=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
