replace sendgrid with mailjet

--- a/.env.staging
+++ b/.env.staging
@@ -39,12 +39,12 @@ REDIS_PASSWORD=
 #
 # MAIL
 #
-MAIL_HOST=smtp.sendgrid.net
+MAIL_HOST=in-v3.mailjet.com
 MAIL_PORT=587
 MAIL_SECURE=TLS
 MAIL_FROM=Tomisha <no-reply@tomisha.com>
-MAIL_USER=apikey
-MAIL_PASS=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
+MAIL_USER=0288317ab4a73784a885628f33523689
+MAIL_PASS=d5561891e60674ad30cd08f2c5952e5e
 
 #
 # PAYMENT
