--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/schedule": "^0.4.0",
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/swagger": "^4.7.15",
+    "@nestjs/throttler": "^1.1.3",
     "@nestjs/typeorm": "^7.1.0",
     "@nuxtjs/auth": "^4.9.1",
     "bcryptjs": "^2.4.3",
